# Latexey

./: LICENSE  README.md
linux_Latexey/: CMakeLists.txt  Latexey  config.txt  helper.py  latexey.py  params.py
linux_Latexey/include/: dict.h  keyboard.h  latexey.h  main.h  pymod.h  taskbar.h
linux_Latexey/src/: dict.cpp  keyboard.cpp  latexey.cpp  main.cpp  pymod.cpp  taskbar.cpp
linux_pyLatexey/: latexey.py
